# License_Plate_Detector

cnn_train/: neural_network.py
program/: CMakeLists.txt  main.cpp
program/include/: function.h  lpd.h  neural_network.h
