cmake_minimum_required(VERSION 3.13)
project(license_plate_recognition)

set(CMAKE_CXX_STANDARD 11)

find_package(OpenCV REQUIRED)
find_package(PythonLibs REQUIRED)

add_executable(license_plate_recognition main.cpp include/function.h include/lpd.h include/neural_network.h)

include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(license_plate_recognition ${OpenCV_LIBS})

include_directories(${PYTHON_INCLUDE_DIRS})
target_link_libraries(license_plate_recognition ${PYTHON_LIBRARIES})

configure_file(share/nn_model.h5 nn_model.h5 COPYONLY)
configure_file(share/dataset/1.jpg dataset/1.jpg COPYONLY)
configure_file(share/dataset/2.jpg dataset/2.jpg COPYONLY)
configure_file(share/dataset/3.jpg dataset/3.jpg COPYONLY)
configure_file(share/dataset/4.jpg dataset/4.jpg COPYONLY)
configure_file(share/dataset/5.jpg dataset/5.jpg COPYONLY)
configure_file(share/dataset/6.jpg dataset/6.jpg COPYONLY)
configure_file(share/dataset/7.jpg dataset/7.jpg COPYONLY)
configure_file(share/dataset/8.jpg dataset/8.jpg COPYONLY)
configure_file(share/dataset/9.jpg dataset/9.jpg COPYONLY)
configure_file(share/dataset/10.jpg dataset/10.jpg COPYONLY)
configure_file(share/dataset/11.jpg dataset/11.jpg COPYONLY)
configure_file(share/dataset/12.jpg dataset/12.jpg COPYONLY)
configure_file(share/dataset/13.jpg dataset/13.jpg COPYONLY)
configure_file(share/dataset/14.jpg dataset/14.jpg COPYONLY)
configure_file(share/dataset/15.jpg dataset/15.jpg COPYONLY)
configure_file(share/dataset/16.jpg dataset/16.jpg COPYONLY)
configure_file(share/dataset/17.jpg dataset/17.jpg COPYONLY)
configure_file(share/dataset/18.jpg dataset/18.jpg COPYONLY)
configure_file(share/dataset/19.jpg dataset/19.jpg COPYONLY)
configure_file(share/dataset/20.jpg dataset/20.jpg COPYONLY)
configure_file(share/dataset/21.jpg dataset/21.jpg COPYONLY)
configure_file(share/dataset/22.jpg dataset/22.jpg COPYONLY)
configure_file(share/dataset/23.jpg dataset/23.jpg COPYONLY)
configure_file(share/dataset/24.jpg dataset/24.jpg COPYONLY)
configure_file(share/dataset/25.jpg dataset/25.jpg COPYONLY)
configure_file(share/dataset/26.jpg dataset/26.jpg COPYONLY)
configure_file(share/dataset/27.jpg dataset/27.jpg COPYONLY)
configure_file(share/dataset/28.jpg dataset/28.jpg COPYONLY)
configure_file(share/dataset/29.jpg dataset/29.jpg COPYONLY)
configure_file(share/dataset/30.jpg dataset/30.jpg COPYONLY)